[project]
name = "health"
authors = [
    { name = "mj", email = "mja@gmail.com"}
]
description = "health"
requires-python = ">=3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.7" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
